--- a/api-gateway/build.gradle
+++ b/api-gateway/build.gradle
@@ -12,11 +12,22 @@ repositories {
 	mavenCentral()
 }
 
+ext {
+	set('springCloudVersion', "2021.0.4")
+}
+
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web:2.7.3'
+	implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+	//eureka client
+	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:3.1.4'
+}
+
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
 }
 
 tasks.named('test') {
