--- a/discovery-server/build.gradle
+++ b/discovery-server/build.gradle
@@ -13,10 +13,10 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web:2.7.3'
+	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server:3.1.4'
+	implementation 'javax.servlet:javax.servlet-api:4.0.1'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
-	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 }
 
 tasks.named('test') {
